@@ -1439,7 +1439,7 @@ sub _cmd_raw {
     if($function eq 'get_processinfo' and defined $res and ref $res eq 'ARRAY' and defined $res->[2] and ref $res->[2] eq 'HASH') {
         $res->[2]->{$key}->{'data_source_version'} .= ' (via Thruk '.$c->config->{'version'}.($c->config->{'branch'}? '~'.$c->config->{'branch'} : '').')';
 
-        # add config tool settings
+        # add config tool settings (will be read from Thruk::Backend::Manager::_do_on_peers)
         if($Thruk::Backend::Pool::peers->{$key}->{'config'}->{'configtool'}) {
             my $tmp = $Thruk::Backend::Pool::peers->{$key}->{'config'}->{'configtool'};
             $res->[2]->{$key}->{'configtool'} = {
